--- a/src/index.html
+++ b/src/index.html
@@ -7,16 +7,18 @@
     <link rel="stylesheet" href="css/HF.css" />
     <link rel="stylesheet" href="css/lunbotu.css" />
     <link rel="stylesheet" href="css/iconfont.css" />
+    <link rel="stylesheet" href="css/article.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <script src="js/require.js" data-main="js/home"></script>
 
 </head>
 <body>
-<!--           头部         -->
+<!--                         头部                     -->
     <header>
         <div class="hp1 cf">
             <div class="container">
             <span>上午好，欢迎光临NO5时尚广场。</span>
-            <a href="#">[登录]</a> <a href="#">[免费注册]</a>
+            <a href="html/login.html">[登录]</a> <a href="#">[免费注册]</a>
             <ul class="fr">
                 <li><a href="#">我的账户</a></li>
                 <li><a href="#">收藏本站</a></li>
@@ -29,7 +31,7 @@
             <div class="container">
             <a href="#" class="logo fl"></a>
             <div class="ser">
-            <input type="text" class="fl" />
+            <input type="text" class="fl" placeholder="口红"/>
             <button class="fl">搜索</button>
             <span>热门搜索：</span>
             <a href="#">防敏感专用</a>
@@ -690,6 +692,7 @@
             </div>
         </div>  
     </header>
+<!--                   轮播图                         -->
     <div class="banner" id="b1">
         <ul>
         <li>
@@ -713,6 +716,10 @@
         </ul>
     </div>
 <!--           尾部        -->
+<!--  -->
+    <article></article>
+    <main></main>
+
     <footer>
         <div class="fo1 cf">
        <div class="fa fl">
