--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,10 +1,73 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+
+          <div class="fo1 cf">
+         <div class="fa fl">
+              <p class="fa_p1">
+               <span>010-51666655</span>
+              <i>9:00-18:00</i>
+             </p>
+            <p class="fa_p2">
+            <span>新浪官方微博</span>
+            <button>+&nbsp;关注</button>
+            </p>
+            <p class="fa_p3">
+            <input type="text" class="fl"   placeholder="请输入你email地址"/>
+             <button>订阅</button>
+                 <span>最新美容资讯，新品及促销信息</span>
+             </p>
+           </div>
+           <div class="fb fl">
+               <dl class="fo1_dl
+               fl">
+               <dt><a href="#">如何订购</a></dt>
+               <dd><a href="#">网上下单</a></dd>
+               <dd><a href="#">电话订购</a></dd>
+               <dd><a href="#">邮寄订购</a></dd>
+               <dd><a href="#">传真订购</a></dd>
+           </dl>
+           <dl class="fo1_dl fl">
+               <dt><a href="#">如何送货</a></dt>
+               <dd><a href="#">送货上门</a></dd>
+               <dd><a href="#">快递</a></dd>
+           </dl>
+           <dl class="fo1_dl
+           fl">
+               <dt><a href="#">如何付款</a></dt>
+               <dd><a href="#">货到付款</a></dd>
+               <dd><a href="#">在线支付</a></dd>
+               <dd><a href="#">银行汇款</a></dd>
+           </dl>
+            <dl class="fo1_dl
+           fl">
+               <dt><a href="#">订单查询</a></dt>
+               <dd><a href="#">订单状态</a></dd>
+               <dd><a href="#">查询订单</a></dd>
+               <dd><a href="#">无效订单</a></dd>
+               <dd><a href="#">支付失败</a></dd>
+               <dd><a href="#">缺货登记</a></dd>
+           </dl>
+            <dl class="fo1_dl
+           fl">
+               <dt><a href="#">会员服务</a></dt>
+               <dd><a href="#">N°5会员级别</a></dd>
+               <dd><a href="#">N°5购物保障</a></dd>
+               <dd><a href="#">N°5贴心服务</a></dd>
+               <dd><a href="#">账户积分使用</a></dd>
+           </dl>
+           <dl class="fo1_dl
+           fl">
+               <dt><a href="#">联系我们</a></dt>
+               <dd><a href="#">关于N°5</a></dd>
+               <dd><a href="#">加入N°5</a></dd>
+               <dd><a href="#">团购加盟</a></dd>
+               <dd><a href="#">网站加盟</a></dd>
+                 <dd><a href="#"> 投诉建议</a></dd>
+             </dl>
+              <i class="fo1_img"></i>  
+         </div>
+                  </div>
+                <div class="fo2">
+             <div class="container">
+              <img src="img/fo3.png" height="161" width="1201" alt="" /> 
+                </div>
+                <p>Copyright @ 2001-2012 N°5.com.cn All Rights Reserved 京ICP备11045170号</p>
+                </div> 
