完整首页登录注册加非完整列表页

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -663,7 +663,7 @@
             </ul>      
             </h1>
             <ul class="nav_ul fl">
-                <li><a href="#"><span>首页</span></a></li>
+                <li><a href="../index.html"><span>首页</span></a></li>
                 <li><a href="#"><span>超级小样</span></a></li>
                 <li><a href="#"><span>明星推荐</span></a></li>
                 <li><a href="#"><span>最新活动</span></a></li>
