完美列表详情

--- a/src/html/goodlist.html
+++ b/src/html/goodlist.html
@@ -73,45 +73,15 @@
             <div class="filter fr">
             <dl>
                 <dt>排序：</dt>
-                <dd class="curr"><a href="#">销量</a></dd>
-                <dd><a href="#">价格</a><b></b></dd>
-                <dd><a href="#">好评度</a></dd>
-                <dd><a href="#">上架时间</a></dd>
+                <dd><a>价格高到底</a><b></b></dd>
+                <dd><a>价格低到高</a></dd>
+                <dd><a>上架时间</a></dd>
             </dl>
-            <!-- <div class="page">
-                <span class="mb"><i>1</i>/3</span>
-                <span class="disa-btn">上一页</span><a href="#">下一页</a>
-            </div> -->
-          <!--   <div class="total"><span>共<strong>81</strong>个商品</span></div>
-            <span class="clear"></span> -->
 
              </div>
             <div class="goods cf fr">
-                <dl>
-                    <a href="#"><img src="../img/list1.jpg" height="200" width="200"/></a>
-                    <a href="#"></a>
-                    <dd></dd>
-                    <button></button>
-                </dl>
-                  <dl>
-                    <a href="#"><img src="../img/list2.jpg" height="200" width="200"/></a>
-                    <a href="#"></a>
-                    <dd></dd>
-                    <button></button>
-                </dl>
-                  <dl>
-                    <a href="#"><img src="../img/list3.jpg" height="200" width="200"/></a>
-                    <a href="#"></a>
-                    <dd></dd>
-                    <button></button>
-                </dl>
-                <dl>
-                    <a href="#"><img src="../img/list4.jpg" height="200" width="200"/></a>
-                    <a href="#"></a>
-                    <dd></dd>
-                    <button></button>
-                </dl>
             </div>
+            <div id="boxpage"></div>
         </div>
         </div>
         </div>
