--- a/src/html/article.html
+++ b/src/html/article.html
@@ -4,8 +4,8 @@
         <a href="#">No5时尚广场提示谨防诈骗</a>
     </p>
     <p class="ar_p2">
-       <a href="#"><img src="../img/art1.jpg" /></a>
-       <a href="#"><img src="../img/art2.jpg" /></a>
-       <a href="#"><img src="../img/art3.jpg" /></a>
+       <a href="html/goodlist.html"><img src="../img/art1.jpg" /></a>
+       <a href="html/goodlist.html"><img src="../img/art2.jpg" /></a>
+       <a href="html/goodlist.html"><img src="../img/art3.jpg" /></a>
     </p>
     </div>
