--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,7 +1,7 @@
         <div class="hp1 cf">
             <div class="container">
             <span>上午好，欢迎光临NO5时尚广场。</span>
-            <a href="#">[登录]</a> <a href="#">[免费注册]</a>
+            <a href="login.html">[登录]</a> <a href="login.html">[免费注册]</a>
             <ul class="fr">
                 <li><a href="#">我的账户</a></li>
                 <li><a href="#">收藏本站</a></li>
