完整项目（最终版）

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -12,7 +12,7 @@
         </div>
         <div class="h_box cf"> 
             <div class="container">
-            <a href="#" class="logo fl"></a>
+            <a href="../index.html" class="logo fl"></a>
             <div class="ser">
             <input type="text" class="fl" placeholder="口红"/>
             <button class="fl">搜索</button>
@@ -27,7 +27,7 @@
             </div>
                <img src="img/qrcode-app-80.png" />
                <i>
-               <a href="#">购物车<strong>0</strong>件</a>
+               <a href="carlist.html">购物车<strong>0</strong>件</a>
                <span>购物车中还没有商品，赶紧选购把!</span>
                </i>
             </div>
@@ -35,7 +35,7 @@
         <div class="h_nav cf">
             <div class="container cf">
             <h1 class="fl">
-            <a href="#" class="h1_a">全部商品分类</a>
+            <a href="../html/goodlist.html" class="h1_a">全部商品分类</a>
             <ul id="h1_nav2">
                       <li>
                           <strong><a href="#">脸部护理</a></strong>
