--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
             </div>
                <img src="img/qrcode-app-80.png" />
                <i>
-               <a href="#">购物车<strong>0</strong>件</a>
+               <a href="html/carlist.html">购物车<strong>0</strong>件</a>
                <span>购物车中还没有商品，赶紧选购把!</span>
                </i>
             </div>
@@ -52,7 +52,7 @@
         <div class="h_nav cf">
             <div class="container cf">
             <h1 class="fl">
-            <a href="#" class="h1_a">全部商品分类</a>
+            <a href="html/goodlist.html" class="h1_a">全部商品分类</a>
             <ul id="h1_nav2">
                       <li>
                           <strong><a href="#">脸部护理</a></strong>
